<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txt_board_refuse_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:layout_marginHorizontal="@dimen/margin_horizon"
        android:text="@string/title_onboard_six"
        style="@style/TitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_board_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        app:srcCompat="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_board_refuse_title"/>

    <TextView
        android:id="@+id/txt_board_re_hate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_onboard_hate"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_board_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_onboard_yes"
        android:background="@drawable/bg_btn_round_ten"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="@dimen/margin_horizon"
        app:layout_constraintBottom_toTopOf="@+id/txt_board_re_hate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>