<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_board_refuse_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="111dp"
            android:text="@string/title_onboard_five"
            android:layout_marginHorizontal="@dimen/margin_horizon"
            style="@style/TitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_board_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            app:srcCompat="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_board_refuse_title" />

        <TextView
            android:id="@+id/txt_board_hate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_onboard_no"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_board_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_onboard_ok"
            android:background="@drawable/bg_btn_round_ten"
            android:textColor="@color/white"
            android:layout_marginBottom="25dp"
            android:layout_marginHorizontal="@dimen/margin_horizon"
            app:layout_constraintBottom_toTopOf="@+id/txt_board_hate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>