<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg">

        <com.depromeet.bboxx.presentation.utils.CustomTopView
            android:id="@+id/cl_top_view"
            android:background="@color/main_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/txt_grow_tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/text_growth_my_feel_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/mypage_bg"
            app:layout_constraintTop_toBottomOf="@id/cl_top_view"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_grow_tag_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_growth_my_feel_choice"
            android:textColor="@color/mypage_bg"
            android:textSize="14sp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/txt_grow_tag_title"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="306dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_grow_tag_select"
            app:layout_constraintBottom_toTopOf="@+id/btn_growth_tag"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            style="@style/CustomChipChoice">

        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_growth_tag"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_btn_round_gray_ten"
            android:text="@string/btn_feel_tag"
            android:textColor="@color/mypage_bg"
            android:layout_marginHorizontal="24dp"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>