<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.depromeet.bboxx.presentation.viewmodel.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/main_bg">

        <com.depromeet.bboxx.presentation.utils.CustomTopView
            android:id="@+id/cl_top_view"
            android:background="@color/mypage_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_bg_board"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@drawable/bg_mypage_round"
            app:layout_constraintTop_toBottomOf="@+id/cl_top_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mypage_nickname_title"
            android:textColor="@color/text_mypage_title"
            android:layout_marginTop="32dp"
            android:layout_marginStart="@dimen/margin_horizon"
            app:layout_constraintStart_toStartOf="@+id/img_bg_board"
            app:layout_constraintTop_toBottomOf="@+id/cl_top_view"
            />

        <TextView
            android:id="@+id/txt_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizon"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="48dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/img_bg_board"
            app:layout_constraintStart_toStartOf="@+id/img_bg_board"
            app:layout_constraintTop_toBottomOf="@+id/txt_nick" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_nickname_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:background="@color/mypage_bg"
            app:layout_constraintBottom_toBottomOf="@+id/txt_nickname"
            app:layout_constraintEnd_toEndOf="@+id/img_bg_board"
            app:layout_constraintTop_toTopOf="@+id/txt_nickname"
            app:srcCompat="@drawable/ic_pen" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_push"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_horizon"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_bg_board">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_push_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mypage_push_title"
                    android:textColor="@color/text_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_push_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/text_mypage_push_msg" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_push"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.App.Switch"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line"
            android:layout_marginHorizontal="@dimen/margin_horizon"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/lay_push"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/margin_horizon"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mypage_app_version_title"
                android:textSize="14sp"
                android:textColor="@color/text_middle_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mypage_app_version_info"
                    android:textSize="16sp"
                    android:textColor="@color/text_middle_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/txt_app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textSize="16sp"
                        android:textColor="@color/text_middle_title" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mypage_team_info"
                    android:textSize="16sp"
                    android:textColor="@color/text_middle_title" />

                <LinearLayout
                    android:id="@+id/ly_team_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    >

                    <ImageView
                        android:id="@+id/btn_team_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_right" />
                </LinearLayout>

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/margin_horizon"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/lay_app_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mypage_using_title"
                android:textSize="14sp"
                android:textColor="@color/text_middle_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mypage_using"
                    android:textSize="16sp"
                    android:textColor="@color/text_middle_title" />

                <LinearLayout
                    android:id="@+id/ly_using"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    >

                    <ImageView
                        android:id="@+id/btn_using"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_right" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mypage_person_info"
                    android:textSize="16sp"
                    android:textColor="@color/text_middle_title" />

                <LinearLayout
                    android:id="@+id/ly_person_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    >

                    <ImageView
                        android:id="@+id/btn_person_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_right" />
                </LinearLayout>

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>